--- a/数据库/数据库操作.md
+++ b/数据库/数据库操作.md
@@ -71,7 +71,10 @@ sudo apt-get install -y mysql-server mysql-client
   ~~~
   drop table 表名;
   ~~~
-
+- 不删除表只删除数据：
+ ```
+ truncate table xxx
+ ```
 - 查看表结构
 
   ~~~
