--- a/java/反射.md
+++ b/java/反射.md
@@ -8,3 +8,20 @@
 - 利用Method 对象，这个对象很像 C++中函数指针。
 
 反射是一种功能强大切复杂的机制，使用它的只要人员是工具构造者，而是用应用程序员。
+
+## Java 反射机制研究及应用
+### java反射机制提供的功能
+   - 在运行时判断任意一个对象所属的类
+    - 在运行时构造任意一个类的对象
+    - 在运行时判断任意一个类所具有的成员变量和方法
+    - 在运行时获取泛型信息
+    - 在运行时调用任意一个对象的成员变量和方法
+    - 在运行时处理注解
+    - 生成动态代理
+
+
+### 反射相关的主要API
+- java.lang.Class：代表一个类
+- java.lang.reflect.Method：代表类的方法
+- java.lang.reflect.Field：代表类的成员变量
+- java.lang.reflect.Constructor：代表类的构造器
