--- a/数据分析/绘图和可视化.md
+++ b/数据分析/绘图和可视化.md
@@ -94,3 +94,59 @@ array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f61b358d630>,
 
 默认情况下，matplotlib会在subplot外围留下一定的边距，并在 subplot 之间留下一定的间距。间距跟图像的高度和宽度有关，因此，如果你调整了图像大小，间距也会自动调整。利用Figure的subplots_adjust方法可以轻而易举地修改间距，此外，它也是个顶级函数：
 
+
+
+
+
+### 添加图例
+图例(legend) 是另一种用于标识图表元素的重要工具.添加图例的方式有很多种.最简单的是在添加subplot的时候传入label参数:
+
+```python
+from numpy.random import randn
+fig = plt.figure()
+ax = fig.add_subplot(1,1,1)
+ax.plot(randn(1000).cumsum(),'k',label='one')
+ax.plot(randn(1000).cumsum(),'k--',label='two')
+ax.plot(randn(1000).cumsum(),'k.',label='three')
+ax.legend(loc='best')
+
+```
+调用`ax.legend()`或`plt.legend()`来创建图例
+
+![](assets/20191212102904291_982610566.png =800x)
+
+lenend方法有几个其他loc位置参数选项.请查看文档字符串(使用ax.legend?).
+
+loc告诉我们 `matplotlib`要将图例放在哪.如果你不是吹毛求疵的话,"best"是不错的选择,因为它会选择最不碍事的位置.要从图例中去除一个或多个元素,不传入label或传入`label='nolegend'`即可.
+
+
+
+### 注解及在Subplot上绘图
+除标准绘图类型,你可能还希望绘制一些子集的注解,可能是文本 箭头 或其它图形.注解和文字可以通过text arrow和annotate函数进行添加.text可以将文本绘制在图表的指定坐标(x,y),还可以加上一些自定义格式:
+
+
+
+
+
+图形的绘制要麻烦一些。matplotlib有一些表示常见图形的对象。这些对象被称为块（patch）。其中有些（如Rectangle和Circle），可以在matplotlib.pyplot中找到，但完整集合位于matplotlib.patches。
+要在图表中添加一个图形，你需要创建一个块对象shp，然后通过ax.add_patch(shp)将其添加到subplot中
+
+```python
+fig = plt.figure()
+ax = fig.add_subplot(1, 1, 1)
+
+rect = plt.Rectangle((0.2, 0.75), 0.4, 0.15, color='k', alpha=0.3)
+circ = plt.Circle((0.7, 0.2), 0.15, color='b', alpha=0.3)
+pgon = plt.Polygon([[0.15, 0.15], [0.35, 0.4], [0.2, 0.6]],
+                   color='g', alpha=0.5)
+
+ax.add_patch(rect)
+ax.add_patch(circ)
+ax.add_patch(pgon)
+
+```
+![](assets/20191212104459242_915944519.png =800x)
+
+###将图表保存到图片
+利用`plt.savefig`可以将当前图表保存到文件.该方法相当于Figure对象的实例方法`savefig`.例如,要将图表保存为SVG文件,你只需要输入:
+`plt.savefig('figpath.svg')`
