--- a/机器学习/贝叶斯.md
+++ b/机器学习/贝叶斯.md
@@ -16,3 +16,100 @@
 在本书中,每个案例进行的推算称为"贝叶斯推理",而将这些案例中的推算方法整合起来,便是"贝叶斯统计学".
 
 ![](assets/20200313212307174_1782822208.png)
+
+
+# 贝叶斯推理结果有时与直觉大相径庭
+
+## 1根据医疗数据,设定"先验概率"
+
+**先验概率:在获得信息之前,各个类别的存在概率**
+这个案例中共有两种类别:一种是"罹患癌症的人"    另一种是"健康的人"
+
+![](assets/20200320173447294_2000499267.png =600x)
+
+
+## 2.以检查准确率为线索,设定"条件概率"
+
+![](assets/20200320173611712_1384630966.png =600x)
+
+
+![](assets/20200320173637391_1789200032.png =600x)
+
+![](assets/20200320173709307_419258526.png =600x)
+
+## 3 检查结果呈阳性,因而排除掉"不可能的情况"
+
+![](assets/20200320173812916_1055777332.png =600x)
+
+## 4 计算罹患癌症的"贝叶斯逆该流程"
+
+为了恢复标准化条件,需要在保持比例关系的前提下,使"相加之和等于1"
+
+(左边长方形面积):(右边长方形面积) = 0.095:1.998
+
+![](assets/20200320174308325_395062293.png =600x)
+
+从这个结果可以得知,在得知"阳性"这一检查结果的情况下,罹患这种癌症的概率为4.5%左右,这便是后验概率(贝叶斯后验概率)
+
+
+## 5. 贝叶斯推理过程总结
+![](assets/20200320174643012_1943288009.png =600x)
+
+
+![](assets/20200320174834406_949312133.png =600x)
+
+通过上图我们可以看出,罹患该种癌症的概率,在尚未进行观察的情况下为0.01(先验概率);
+而得知检查结果呈现阳性之后,数值便发生了更新,变为越0.045(后验概率).
+
+## 小结:
+![](assets/20200320175052648_351981525.png =600x)
+
+
+
+# 根据主观数字也可以进行推理
+
+贝叶斯的魅力在于:即使没有事前的客观数据,也能进行推算.
+也就是说,可以主观设定先验概率,进行推算.
+
+这可以更进一步的解释为:学会这个方法,才能更深刻的理解"贝叶斯推理的思想",全面了解它的神奇和不可思议,以及奇怪和可疑之处.
+
+案例:
+![](assets/20200320190444008_2020217642.png =600x)
+
+## 1.主观上假定你是否是"真命天子"的"先验概率"
+
+在这种情况下,一般会采用"理由不充分原理"的方法,暂时把这两种情况的概率视为相等.
+
+
+## 2.设法找到数据,设定"条件概率"
+![](assets/20200320194022531_212490550.png =600x)
+
+表中的概率与第一讲.第二讲中提到的概率相同,都是指"某一特定类别下,各种行为的概率"
+
+![](assets/20200320200843984_797982516.png =600x)
+
+
+## 收到巧克力,排除掉"不肯能的概率"
+
+![](assets/20200320201115000_1356884756.png =600x)
+
+![](assets/20200320201137707_994890676.png =600x)
+
+
+## 贝叶斯推理过程总结
+
+![](assets/20200320201209787_376667074.png =600x)
+
+
+![](assets/20200320201241641_289938246.png =600x)
+
+
+可以解释为:你内心描绘的类似"信念程度"这样的概念,称为"主观概率".
+
+## 小结:
+![](assets/20200320202617347_1587656036.png =600x)
+
+
+# 运用"概率的概率",拓宽推理范围
+
+
