--- a/机器学习/sklearn 系列/决策树.md
+++ b/机器学习/sklearn 系列/决策树.md
@@ -288,6 +288,21 @@ max_features 是用来限制高纬度数据过拟合的剪枝参数,其方法比
 
 
 
+### 重要属性和接口
+属性是在模型训练后,能够调用查看的模型的各种性质,对决策树来说,最重要的是`feature_importances_`,能够查看各个特征对模型的重要性.
+
+sklearn中许多算法的接口都是相似的,比如我们之前已经使用的`fit`和`score`,几乎对每个算法都可以使用. 
+除了这俩个算法外,决策树最常用的接口还有`apply`和`predict`. apply 中输入测试集返回每个测试样本所在的叶子节点的索引, predict 输入测试集返回每个测试样本的标签.
+
+
+至此我们已经学完了分类树`DecisionTreeClassifier`和用决策树绘图(export_graphviz)的所有基础.
+我们讲解了决策树的基本流程,分类树的七个参数,一个属性,四个接口,以及绘图所用的代码.
+
+七个参数:
+`Criterion`,两个随机性相关参数(random_state,splitter),四个剪枝参数(max_depth,min_sample_leaf,max_feature,min_impurity_decrease)
+
+一个属性:feature_importance_
+四个接口:fit,score,apply,predict
 
 
 
